name:                  ambiata-master
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              master
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           master.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-mismi-s3
                     , process                         == 1.2.*
                     , text                            == 1.2.*
                     , unix                            == 2.7.*
                     , filepath                        == 1.3.*
                     , directory                       == 1.2.*
                     , temporary                       == 1.2.*
                     , bytestring                      == 0.10.*
                     , cryptohash                      == 0.11.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Master
                       Master.Control
                       Master.Data
                       Master.Runner


executable             master
    ghc-options:       -Wall -threaded -O2
    main-is:           master.hs
    hs-source-dirs:    main
                     , dist/build/autogen
    build-depends:     base
                     , ambiata-master
                     , ambiata-p
                     , ambiata-x-optparse
                     , ambiata-mismi-core
                     , ambiata-mismi-s3
                     , optparse-applicative            == 0.11.*
                     , text

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-master
                     , ambiata-p
                     , text
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-master
                     , ambiata-mismi-core-test
                     , ambiata-mismi-s3-test
                     , ambiata-p
                     , text
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
