name:                  ambiata-master
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              master
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           master.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-mismi-core
                     , ambiata-mismi-s3
                     , ambiata-x-eithert
                     , ambiata-x-htoml
                     , containers                      == 0.5.*
                     , htoml                           == 0.1.*
                     , lens                            >= 4.6        && < 4.9
                     , parsec                          == 3.1.*
                     , process                         == 1.2.*
                     , text                            == 1.2.*
                     , unix                            == 2.7.*
                     , filepath                        == 1.3.*
                     , directory                       == 1.2.*
                     , bytestring                      == 0.10.*
                     , cryptohash                      == 0.11.*
                     , transformers                    >= 0.3        && < 0.5
                     , unordered-containers            == 0.2.*
                     , uuid                            == 1.3.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Master
                       Master.Data
                       Master.Runner
                       Master.Serial
                       Master.Serial.Toml


executable             master
    ghc-options:       -Wall -threaded -O2
    main-is:           ../main/master.hs
    hs-source-dirs:    gen
    build-depends:     base
                     , ambiata-master
                     , ambiata-p
                     , ambiata-x-optparse
                     , ambiata-mismi-core
                     , ambiata-mismi-s3
                     , ambiata-x-eithert
                     , containers
                     , filepath                        == 1.3.*
                     , directory                       == 1.2.*
                     , optparse-applicative            == 0.11.*
                     , text
                     , unix

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-master
                     , ambiata-mismi-s3-test
                     , ambiata-p
                     , containers
                     , text
                     , QuickCheck                      == 2.8.*
                     , quickcheck-instances            == 0.3.*

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-master
                     , ambiata-mismi-core-test
                     , ambiata-mismi-s3
                     , ambiata-mismi-s3-test
                     , ambiata-p
                     , ambiata-x-eithert
                     , clock                           == 0.5.*
                     , containers
                     , directory                       == 1.2.*
                     , filepath                        == 1.3.*
                     , ini                             == 0.3.3.*
                     , temporary                       == 1.2.*
                     , text
                     , transformers                    >= 0.3        && < 0.5
                     , QuickCheck                      == 2.8.*
                     , quickcheck-instances            == 0.3.*

test-suite test-cli
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -fno-warn-missing-signatures
  hs-source-dirs:      test
  main-is:             test-cli.hs
  build-depends:       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-master
